# hidapi-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: co2mon-tokio.rs  co2mon.rs  concurrency_test.rs  dump_descriptors.rs  lshid.rs  readhid.rs
src/: backend.rs  error.rs  ffi.rs  hidapi.rs  lib.rs  linux_native.rs  macos_native.rs  webusb.rs
src/backend/: hidapi.rs  linux_hidraw.rs  mod.rs  rust_hidraw.rs
src/backend/hidapi/: ffi.rs  hidapi.rs  mod.rs
src/backend/linux_hidraw/: hidraw.rs  kbug.rs  mod.rs  udev_enumerator.rs
src/backend/rust_hidraw/: error.rs  kbug.rs  udev_enumerator.rs
src/linux_native/: ioctl.rs
src/macos_native/: ffi.rs
src/parser/: mod.rs
src/windows_native/: device_info.rs  error.rs  mod.rs  types.rs
