[package]
name = "hidapi"
version = "0.5.0"
authors = [
    "Roland Ruckerbauer <roland.rucky@gmail.com>",
    "Osspial <osspial@gmail.com>",
    "Artyom Pavlov <newpavlov@gmail.com>",
	"mberndt123"
]
repository = "https://github.com/Osspial/hidapi-rs"
description = "Rust-y wrapper around hidapi"
license = "MIT"
keywords = ["hid", "api", "usb","binding", "wrapper"]
build = "build.rs"
links = "hidapi"
documentation = "https://docs.rs/hidapi"
edition = "2018"

[features]
default = ["linux-rust-hidraw"]
linux-static-libusb = []
linux-static-hidraw = []
linux-shared-libusb = []
linux-shared-hidraw = []
linux-rust-hidraw = ["libudev", "nix"]

[dependencies]
libc = { version = "0.2.54" }
failure = "0.1.5"
failure_derive = "0.1.5"
cfg-if = "0.1.7"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.13.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libudev = { version = "0.2.0", optional = true }

[build-dependencies]
cc = "1.0.36"
pkg-config = "0.3.14"
