[package]
name = "hidapi"
version = "1.1.1"
authors = [
    "Roland Ruckerbauer <roland.rucky@gmail.com>",
    "Osspial <osspial@gmail.com>",
    "Artyom Pavlov <newpavlov@gmail.com>",
	"mberndt123",
	"niklasad1"
]
repository = "https://github.com/Osspial/hidapi-rs"
description = "Rust-y wrapper around hidapi"
license = "MIT"
keywords = ["hid", "api", "usb","binding", "wrapper"]
build = "build.rs"
links = "hidapi"
documentation = "https://docs.rs/hidapi"
edition = "2018"

[features]
default = ["linux-rust-hidraw"]
linux-rust-hidraw = [ "udev", "nix", "lazy_static" ]
linux-static-libusb = []
linux-static-hidraw = []
linux-shared-libusb = []
linux-shared-hidraw = []

[dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
udev = { version = "0.3.0", optional = true }
nix = { version = "0.17", optional = true }
lazy_static = { version = "1.4", optional = true }

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
